@@ -208,12 +208,6 @@ PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
        +1: pquerna, nd, wrowe
        Votes from before the integration branch: +1: jerenkrantz
 
-    *) Correct mod_cgid's argv[0] so that the full path can be delved by the
-       invoked cgi application, to conform to the behavior of mod_cgi.
-       PR: 34542  Submitted by: Pradeep Kumar S <pradeep.smani gmail.com>
-         http://svn.apache.org/viewcvs?view=rev&rev=264623
-       +1: wrowe, colm, trawick
-
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
   [ please place SVN revisions from trunk here, so it is easy to
     identify exactly what the proposed changes are!  Add all new
